# FlipkartGrid

./: .gitignore  Camera Distortion Caliberation.ipynb  README - Copy.md  README.md  Undistortion.ipynb  Untitled.ipynb  arena_preprocessing2.py  final.ino
apriltag_detector/: CMakeLists.txt  package.xml
apriltag_detector/cfg/: LineParam.cfg
apriltag_detector/scripts/: bot1.py  central.py  esp.py  esp_spare1.py  move_bot.py  move_test1.py  move_test2.py  move_test3.py  move_test4.1.py  move_test4.py  node1.py  node2.py  node3.py  node4.py  node5.py  node6.py  spare_bot1.py  spare_central1.py  spare_central2.py  test_one.py  test_two.py
dynamic_tutorials/: CMakeLists.txt
dynamic_tutorials/cfg/: Tutorials.cfg
dynamic_tutorials/src/: node1.py  node2.py  server.py
fisheye_correction/: calibration.py  calibration_data.npz  requirements.txt
flipkart_grid/: CMakeLists.txt  package.xml
grid_arena/: CMakeLists.txt
grid_arena/models/overhead_camera/: model.sdf
grid_control/grid_control/: CMakeLists.txt  package.xml
grid_control/grid_phase1_controller/: CMakeLists.txt  package.xml
grid_control/grid_phase1_controller/cfg/: Pid.cfg
grid_control/grid_phase1_controller/src/: controller.py  grid_phase1_controller.py  phase1_controller.py
grid_control/grid_phase2_controller/: CMakeLists.txt  package.xml
grid_control/grid_phase2_controller/action/: bot.action
grid_control/grid_phase2_controller/cfg/: pid.cfg
grid_control/grid_phase2_controller/data/: coordinates.csv  coordinates_backup.csv  coordinates_test.csv  drop_location.csv  input.yaml  input3.yaml  params.json  solutions.json
grid_control/grid_phase2_controller/msg/: Goal.msg
grid_control/grid_phase2_controller/src/: action_client.py  action_client_trial.py  action_server.py  cbs.py  cbs_demo.py  controller.py  controller1.py  controller2.py  coord_vis.py  demo.py  server_test.py  test.py  visualizer.py
grid_hardware/camera_driver/: CMakeLists.txt  package.xml
grid_hardware/camera_driver/msg/: GridPose.msg  GridPoseArray.msg
grid_hardware/camera_driver/src/: camera_driver.py  pose_camera_driver.py  pose_publisher.py
grid_hardware/differential_drive/: CMakeLists.txt  package.xml
grid_hardware/differential_drive/msg/: DiffRPM.msg
grid_hardware/differential_drive/src/: diff_drive.py  my_controller_x.py
grid_hardware/grid_esp8266/: grid_esp8266.ino
grid_hardware/grid_hardware/: CMakeLists.txt  package.xml
grid_hardware/grid_transmitter/: CMakeLists.txt  package.xml
grid_hardware/grid_transmitter/msg/: PwmCombined.msg
grid_hardware/grid_transmitter/src/: esp_websocket.py  transmitter.py
grid_hardware/micromouse_eagle/: ESpdesign.brd  ESpdesign.psd  ESpdesign_1.brd  ESpdesign_1.psd  dxfimp.scr  eagle.epf
grid_hardware/micromouse_eagle/bot_4/: ESpdesign.b#1  ESpdesign.b#2  ESpdesign.b#4  ESpdesign.b#7  ESpdesign.b#9  ESpdesign.brd  ESpdesign.s#2  ESpdesign.s#3  ESpdesign.s#5  ESpdesign.s#6  ESpdesign.s#7  ESpdesign.s#8  ESpdesign.s#9  ESpdesign.sch  eagle.epf
grid_hardware/micromouse_eagle/bots_123/: ESpdesign.b#1  ESpdesign.b#3  ESpdesign.b#4  ESpdesign.b#6  ESpdesign.brd  ESpdesign.s#1  ESpdesign.s#2  ESpdesign.sch
grid_hardware/micromouse_solidworks/: Assem2.DWG  Assem2.DXF  Spacer sleeve M3-12mm.SLDPRT  april_tag.SLDPRT  caster_wheel.SLDPRT  lclamp gear car new.SLDPRT  long_screw.SLDPRT  pcb.SLDPRT
grid_hardware/micromouse_solidworks/Real Bo Motor With Wheel/: Real Bo Motor.SLDASM
grid_hardware/micromouse_solidworks/battery-holder-for-2x-18650-1.snapshot.2/: 18650 battery holder.SLDASM  18650 holder 2x.SLDPRT
grid_hardware/micromouse_solidworks/header-1p-3p-6p-female-2-54-mm-pitch-90-degree-1.snapshot.7/: H254_90deg_6pin.SLDASM
grid_robot/: CMakeLists.txt  package.xml
grid_robot/launch/: gazebo.launch  multi_robot.launch  one_robot.launch
grid_robot/meshes/: base_link.STL  left_wheel_link.STL  right_wheel_link.STL
grid_robot/urdf/: grid_robot.csv  grid_robot.urdf  grid_robot.urdf.xacro
grid_simulator/grid_arena/: package.xml
grid_simulator/grid_arena/worlds/: arena.world
grid_simulator/grid_robot/: package.xml
grid_simulator/grid_robot/launch/: display.launch  one_robot.launch
grid_simulator/grid_robot/media/materials/scripts/: april.material
grid_simulator/grid_robot/urdf/: grid_robot_base.urdf.xacro
grid_simulator/grid_simulator/: CMakeLists.txt  package.xml
grid_utils/apriltag_detector/: CMakeLists.txt  package.xml
grid_utils/apriltag_detector/cfg/: dynamic_reconfigure.cfg
grid_utils/apriltag_detector/scripts/: bot1.py  bot2.py  bot3.py  bot4.py  camera_driver_new.py  esp_spare1.py  esp_websocket1.py  esp_websocket2.py  esp_websocket3.py  esp_websocket4.py  esp_websocket_new.py  hard_code1.py  key_controller_cv.py  new_controller.py  new_controller2.py  new_controller3.py  new_controller_sayan.py  node2.py  spare_bot1.py  spare_central1.py  start.py  test.py  test_pub.py  test_web.py
grid_utils/dynamic_tutorials/src/: node2.py  server.cpp
grid_utils/grid_array/: CMakeLists.txt  package.xml
grid_utils/grid_array/src/: server.py
grid_utils/grid_array/srv/: GridArray.srv
grid_utils/grid_utils/: CMakeLists.txt  package.xml
grid_utils/phase1_goal_detector/: CMakeLists.txt  package.xml
grid_utils/phase1_goal_detector/src/: phase1_goal_detector.py
grid_utils/phase1_goal_detector/srv/: GoalArray.srv
