<?xml version="1.0"?>
<package format="2">
  <name>flipkart_grid</name>
  <version>0.6.13</version>
  <description>flipkart_grid contains Gazebo and ROS packages for Flipkart Grid 3.0 Team B</description>

  <author email="arnabgudu.gs@gmail.com">Arnab Paikaray</author>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>

  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>grid_arena</exec_depend>
  <exec_depend>grid_robot</exec_depend>
  <exec_depend>grid_phase1_controller</exec_depend>
  <exec_depend>camera_driver</exec_depend>
  <exec_depend>differential_drive</exec_depend>
  <exec_depend>grid_transmitter</exec_depend>
  <exec_depend>grid_array</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
