<?xml version="1.0"?>
<package format="2">
  <name>flipkart_grid</name>
  <version>0.6.13</version>
  <description>flipkart_grid contains Gazebo and ROS packages for Flipkart Grid 3.0 Team B</description>

  <author email="arnabgudu.gs@gmail.com">Arnab Paikaray</author>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>

  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>grid_control</exec_depend>
  <exec_depend>grid_hardware</exec_depend>
  <exec_depend>grid_simulator</exec_depend>
  <exec_depend>grid_utils</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
