<?xml version="1.0"?>
<package format="2">
  <name>grid_phase2_controller</name>
  <version>0.0.0</version>
  <description>The grid_phase2_controller package</description>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <export>
  </export>
</package>
