<?xml version="1.0"?>
<package format="2">
  <name>grid_hardware</name>
  <version>0.6.13</version>
  <description>grid_hardware contains Gazebo and ROS packages for Flipkart Grid 3.0 Team B</description>

  <author email="arnabgudu.gs@gmail.com">Arnab Paikaray</author>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>
  <license>None</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>camera_driver</exec_depend>
  <exec_depend>differential_drive</exec_depend>
  <exec_depend>grid_transmitter</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
