<package format="2">
  <name>grid_robot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for grid_robot</p>
    <p>This package contains configuration data, 3D models and launch files
for grid_robot robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <architecture_independent />
  </export>
</package>
