<?xml version="1.0"?>
<package format="2">
  <name>grid_utils</name>
  <version>0.6.13</version>
  <description>grid_utils contains Gazebo and ROS packages for Flipkart Grid 3.0 Team B</description>

  <author email="arnabgudu.gs@gmail.com">Arnab Paikaray</author>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>
  <license>None</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>grid_array</exec_depend>
  <exec_depend>apriltag_detector</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
